# ImageProcessing

./: CMakeLists.txt  LICENSE  main.c  readme.txt
images/: csl.html
imagesNew/: lion.pgm  street.pgm  street1.pgm
includes/: canny.h  distance.h  gaussianBlur.h  hough.h  pgma.h  preproc.h  struct.h  vector.h
scripts/: houghCurves.m  houghTransform.m
sources/: canny.c  distance.c  gaussianBlur.c  hough.c  lodepng.c  pgma.c  preproc.c
